--- a/Semana2/Aula3/8_Exercicio/index.html
+++ b/Semana2/Aula3/8_Exercicio/index.html
@@ -10,19 +10,20 @@
     <h1>
         Caixa registradora
     </h1>
+    <button id="botaoNovaCompra" onclick="novaCompra()">Nova compra</button><br><br>
     <label id="idLabelProduto">Valor do produto</label><br>
     <input type="number" id="valorDoProduto" placeholder="Informe o valor do produto" style="width: 15%;"/>
-    <button id="botao" onclick="adicionarValorDoProduto()">Adicionar</button><br>
+    <button id="botaoAdicionar" onclick="adicionarValorDoProduto()">Adicionar</button><br>
 
     <label id="valoTotal"></label><br><br>
     
     <label id="idLabelDinheiro">Valor em Dinheiro</label><br>
     <input type="number" id="valorRecebido" placeholder="Informe o valor do dinheiro" style="width: 15%;"/>
-    <button onclick="valorRecebido()">Calcular</button><br><br>
+    <button id="botaoCalcular" onclick="valorRecebido()">Calcular</button><br><br>
 
     <label id="idDinheiro">Dinheiro recebido</label><br>
     <label id="idTroco">Valor do Troco</label><br>
-
+    
 <script src="PadariaTechPlus.js"></script>
 </body>
 </html>
